--- a/s-game-website-client/client-website/index.html
+++ b/s-game-website-client/client-website/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+  <title>s-game-www.s-game.cn</title>
+  <meta name="renderer" content="webkit"/>
+  <!--<meta name="force-rendering" content="webkit"/>-->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="description" content="s-game-www.s-game.cn">
   <meta name="Keywords" content="s-game">
   <link rel="icon" href="static/images/favicon.ico"/>
-  <title>s-game-www.s-game.cn</title>
 </head>
 <body>
 <div id="app"></div>
