--- a/s-game-website-client/client-website/index.html
+++ b/s-game-website-client/client-website/index.html
@@ -3,14 +3,25 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-  <title>s-game-www.s-game.cn</title>
+  <title>StellarBug</title>
   <meta name="renderer" content="webkit"/>
   <!--<meta name="force-rendering" content="webkit"/>-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="static/images/favicon.ico"/>
+
   <meta name="description" content="s-game-www.s-game.cn">
   <meta name="Keywords" content="s-game">
-  <link rel="icon" href="static/images/favicon.ico"/>
+  <meta name="og:type" content="webpage">
+  <meta name="og:url" content="webpage">
+  <meta property="og:type" content="webpage">
+  <meta property="og:url" content="webpage">
+  <meta property="og:title" content="webpage">
+  <meta property="og:description" content="webpage">
+  <meta name="weibo:webpage:url" content="webpage">
+  <meta property="weibo:webpage:url" content="webpage">
+  <meta property="weibo:webpage:title" content="webpage">
+  <meta property="weibo:webpage:description" content="webpage">
 </head>
 <body>
 <div id="app"></div>
