--- a/s-game-website-client/client-website/index.html
+++ b/s-game-website-client/client-website/index.html
@@ -10,18 +10,18 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="static/images/favicon.ico"/>
 
-  <meta name="description" content="s-game-www.s-game.cn">
-  <meta name="Keywords" content="s-game">
+  <meta name="description" content="StellarBug(中文名《星虫》)（暂定）是一个基于Unity2D开发的像素风格的俯视角星际探索类沙盒游戏">
+  <meta name="Keywords" content="game,VideoGame,stellar,bug,2DGame,indieGame,UnityGame,SpaceShip,StellarBug">
   <meta name="og:type" content="webpage">
   <meta name="og:url" content="webpage">
   <meta property="og:type" content="webpage">
   <meta property="og:url" content="webpage">
-  <meta property="og:title" content="webpage">
-  <meta property="og:description" content="webpage">
+  <meta property="og:title" content="StellarBug">
+  <meta property="og:description" content="StellarBug(中文名《星虫》)（暂定）是一个基于Unity2D开发的像素风格的俯视角星际探索类沙盒游戏">
   <meta name="weibo:webpage:url" content="webpage">
   <meta property="weibo:webpage:url" content="webpage">
-  <meta property="weibo:webpage:title" content="webpage">
-  <meta property="weibo:webpage:description" content="webpage">
+  <meta property="weibo:webpage:title" content="StellarBug">
+  <meta property="weibo:webpage:description" content="StellarBug(中文名《星虫》)（暂定）是一个基于Unity2D开发的像素风格的俯视角星际探索类沙盒游戏">
 </head>
 <body>
 <div id="app"></div>
