添加服务端SSL证书后，修改服务端域名

--- a/s-game-website-client/client-cms/public/index.html
+++ b/s-game-website-client/client-cms/public/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="./iconfont.css"/>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <!--<script src="//at.alicdn.com/t/font_1104271_so151lbumpq.js"></script>-->
     <style>
         #loader {
