--- a/s-game-website-client/client-website/index.html
+++ b/s-game-website-client/client-website/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="static/images/favicon.ico"/>
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
 
   <meta name="description" content="StellarBug(中文名《星虫》)（暂定）是一个基于Unity2D开发的像素风格的俯视角星际探索类沙盒游戏">
   <meta name="Keywords" content="game,VideoGame,stellar,bug,2DGame,indieGame,UnityGame,SpaceShip,StellarBug">
