--- a/s-game-website-client/client-website/index.html
+++ b/s-game-website-client/client-website/index.html
@@ -8,7 +8,7 @@
   <!--<meta name="force-rendering" content="webkit"/>-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="static/images/favicon.ico"/>
+  <link rel="icon" href="https://cdn.ahyaya.net/images/static/images/favicon.ico"/>
   <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
 
   <meta name="description" content="StellarBug(中文名《星虫》)（暂定）是一个基于Unity2D开发的像素风格的俯视角星际探索类沙盒游戏">
